# rank-from-references

./: .gitignore  README.md  RFR.tex  pyproject.toml
analyses/main/: README.md
analyses/sensitivity/: README.md
docs/: REPRODUCIBILITY.md  USAGE.md
examples/: toy_annotations.csv
scripts/: README.md  rfr_build_memmap.py  rfr_compare_benchmarks.py  rfr_generate_primary_grid.py  rfr_main_simulation.py  rfr_sensitivity_analysis.py  run_rfr.py
src/rfr/: __init__.py  baselines.py  cli.py  core.py  io.py  simulation.py
tests/: test_baselines.py  test_core_arrays.py  test_simulation.py  test_smoke.py
